# a11y-catscan

./: .auth-state.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  README.md  SECURITY.md  a11y-catscan.py  a11y-catscan.yaml.example  alfa-engine.mjs  allowlist.py  allowlist.yaml.example  axe-spider.py  axe-spider.yaml  axe-spider.yaml.example  axe-spyder.py  axe-spyder.yaml  axe-spyder.yaml.example  cli_modes.py  cookies.json  crawl.py  crawl_utils.py  engine_mappings.py  login-hubzero.py  mcp_server.py  package-lock.json  package.json  pyproject.toml  pytest.ini  registry.py  report_diff.py  report_group.py  report_html.py  report_io.py  report_llm.py  results.py  scanner.py
.github/workflows/: ci.yml
docs/: index.html
docs-src/: authentication.md  configuration.md  faq.md  getting-started.md  mcp.md  reports.md  scan-workflows.md  troubleshooting.md
docs/assets/: site.css
docs/authentication/: index.html
docs/changelog/: index.html
docs/configuration/: index.html
docs/design/: index.html
docs/faq/: index.html
docs/getting-started/: index.html
docs/mcp/: index.html
docs/reports/: index.html
docs/scan-workflows/: index.html
docs/troubleshooting/: index.html
engines/: __init__.py  alfa.py  axe.py  base.py  htmlcs.py  ibm.py
site-src/: site.json
site-src/templates/: home.html
tests/: conftest.py  test_axe_engine.py  test_cli_helpers.py  test_cli_iter_helpers.py  test_crawl_loop.py  test_dedup_multi_tag.py  test_diff_scans.py  test_engine_mappings.py  test_engine_normalizers.py  test_group_results.py  test_http_status.py  test_main_modes.py  test_mcp_tools.py  test_registry.py  test_report_io.py  test_reports.py  test_scanner_browser.py  test_scanner_helpers.py  test_search_findings.py  test_signal_handlers.py
tests/fixtures/: clean.html  fake_login_plugin.py  known_bad.html  session_expiry_plugin.py  with_links.html
tests/fixtures/site/: index.html  page-a.html  page-b.html
tools/: build_site.py  requirements-docs.txt
